# aws-glib

./: Makefile.am  Makefile.include  README  autogen.sh  aws-glib-1.0.pc.in  configure.ac
aws-glib/: Makefile.include  aws-credentials.c  aws-credentials.h  aws-glib.h  aws-s3-client.c  aws-s3-client.h
doc/: .gitignore  Makefile.am  aws-glib-docs.sgml
